crates/toml_edit/tests/snapshots/invalid/key/tab.stderr
TOML parse error at line 2, column 3
  |
2 | a	b = 1
  |   ^
key with no value, expected `=`
